@@ -2,6 +2,11 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Jul 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  tla-tools-20060509.ebuild:
+  Add a workaround to get tla-tools install something (did not test the
+  installed files)
+
   13 Jan 2008; (Tommy[D]) tommy100@gmx.de tla-tools-20060509.ebuild:
   drop WANT_AUTO*
 
